fix slider layout shift

--- a/app/globals.css
+++ b/app/globals.css
@@ -34,6 +34,7 @@ body {
 
 .slider-width {
   width: calc(100vw - 80px);
+  max-width: 1200px;
 }
 
 .slider-node {
